# lazyaix-agent-corp-1

./: .env.example  .gitignore  README.md  agent.py  demo_compression.py  docker-compose.yml  env.example.txt  loop.py  pyproject.toml  scheduler.py
config/: env.py
context/: __init__.py  adapter.py  compaction.py  config.py  models.py  state.py  utils.py
db/: connection.py  event_store_repository.py  outbox_repository.py  postgres_state_store.py  processed_event_repository.py  redis_idempotency.py  schema.sql
docs/: 2026-07-01-kafka-agent-event-bus-design.md  CONTEXT_COMPACT_PLAN.md  minicode四层压缩策略.md
events/: __init__.py  bus.py  event_store.py  in_memory.py  kafka_event_bus.py  outbox.py  outbox_publisher.py  schema.py  serde.py
girlfriend/: __init__.py  engine.py  prompt.py  renderer.py  scheduler.py  state.py  status.py
memory/: __init__.py  audit.py  classifier.py  config.py  embedding.py  embeddings.py  exporter.py  extractors.py  memory.py  models.py  operations.py  redaction.py  retrieval.py  service.py  storage.py  summarizer.py  vector_store.py  vector_worker.py  worker.py
models/: __init__.py  factory.py  model.py
rag/: __init__.py  chunker.py  embedder.py  fusion.py  index_pdf.py  milvus_client.py  parser.py  reranker.py  retriever.py  tool.py
skills/: __init__.py  _selftest.py  base.py  registry.py  skill.py  travel_plugin.py
subagents/: __init__.py  handlers.py  workers.py
tests/: conftest.py  test_agent_poll.py  test_bus_protocol.py  test_compaction_l1_l2_l3.py  test_compaction_l4.py  test_compaction_utils.py  test_compatibility.py  (+36 more)
(+81 files in other folders)
