[project]
name = "agent-team-exercise"
version = "0.1.0"
description = "A team exercise scaffold for building a modular agent."
requires-python = ">=3.10"
dependencies = [
    "openai>=2.44.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dotenv = ["python-dotenv>=1.0.0"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
